# Computational_Intelligence2022

./: .gitignore  pyproject.toml  readme.md
lab01/: lab1.py  readme.md
lab1/: readme.md
lab2/: lab2.ipynb  lab2.py  readme.md
lab3/: lab3-4.ipynb  lab3.ipynb  readme.md
lessonScripts/: onemax.ipynb
