[tool.poetry]
name = "lab01"
version = "0.1.0"
description = ""
authors = ["FABIO SOFER s301195 <s301195@studenti.polito.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
