[tool.poetry]
name = "computational-intelligence2022"
version = "0.1.0"
description = ""
authors = ["FABIO SOFER s301195 <s301195@studenti.polito.it>"]
readme = "README.md"
packages = [{include = "computational_intelligence2022"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy1 = "^0.0.1"
matplotlib = "^3.6.1"
ipykernel = "^6.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
